--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -144,7 +144,7 @@
             <%= item.product_name %>
           </h3>
           <div class='item-prices'>
-            <span><%= item.prices %>円<br><%= "配送料負担" %></span>
+            <span><%= item.prices %>円<br><%= item.shippingcharge.name %></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
